# notes-api

./: README.md  alembic.ini  database.py  dependencies.py  exceptions.py  main.py  models.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: 67bbeef7cd38_add_hashed_password_to_users.py  be5a4dfeb518_add_hashed_password_to_users.py
models/: __init__.py  note.py  user.py
routers/: auth.py  notes.py  users.py
schemas/: __init__.py  note.py  user.py
services/: auth_service.py  note_service.py  token_service.py  user_service.py
