[project]
name = "notes-api"
version = "0.1.0"
description = "FastAPI training project for backend fundamentals"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi[standard]>=0.135.1",
    "sqlalchemy>=2.0.48",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.0.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "alembic>=1.18.4",
    "bcrypt==4.0.1",
]
